# harpspec

./: .gitignore  LICENSE  harpspec.py  pyproject.toml
doc/source/: conf.py  index.rst
doc/source/api/: index.rst
doc/source/design/: index.rst  pipeline.rst  thecannon.rst
notebooks/: example.ipynb  get-spectra.ipynb
src/: figsave.py  get-spectra.ipynb  harpspec-preprocess.ipynb  harpspec-train.ipynb  harpspec.py  harpspeccli.py  pymem.py
