[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "harpspec"
version = "0.1"
authors = [
    {name = "Joseph Hand", email = "jehand@ku.edu"},
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Topic :: Scientific/Engineering :: Astronomy'
]
dependencies = [
    "astropy",
    "matplotlib",
    "numpy",
    "scipy",
    "TheCannon",
    "tqdm"
]

[project.scripts]
harpspec = "harpspeccli:main"
